--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router": "^6.27.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
