--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@mui/styles": "^6.1.6",
@@ -18,6 +19,7 @@
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
@@ -26,7 +28,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "sonner": "^1.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,6 +56,6 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^5.6.3"
+    "typescript": "^4"
   }
 }
